--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body{
     background-color: blue;
     width: 90%;
     margin: 3rem auto 1rem auto;
-
+    position: relative;
 }
 
 .tools-container{
@@ -37,8 +37,9 @@ body{
 }
 
 
+
 /* up tools */
-.up-icons>span{
+.up-icons>i{
     background-color: gray;
     padding: 0.2rem;
     color: white;
@@ -48,7 +49,10 @@ body{
     position: absolute;
     top: 0.2rem;
     right:0;
+    color: white;
 }
+
+
 
 /* cards */
 
@@ -57,8 +61,21 @@ body{
     height: calc(100% / 4 - 0.8rem);
     border: dashed;
     margin: 0.4rem 0.2rem;
+    position: relative;
 }
 
+.card>img{
+    width: 100%;
+    height: 100%;
+}
+
+.card>span{
+    color: white;
+    position: absolute;
+    bottom: 0.5rem;
+    left: 0;
+    z-index: 9;
+}
 
 /* bottom tools */
 
